fix z-index of portrait relative to infocard

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -22,6 +22,7 @@ header{
 }
 .headerIntroduction{
     grid-area:1/1/3/2;
+    position:relative;
     display:grid;
     grid-template-columns: var(--portrait-width) 1fr;
     grid-template-rows: 60px calc(var(--portrait-height) - 120px) 60px;
@@ -47,7 +48,7 @@ header{
 }
 .infoCard{
     grid-area: 2/2/3/3;
-    position:relative;
+
     background-color: var(--background-color);
     box-shadow: var(--box-shadow-combined);
     transition: background-color var(--default-transition-time) ease-in-out,
@@ -70,8 +71,8 @@ header{
 .buttonHolder{
     grid-area:3/2/4/3;
     position: absolute;
-    bottom:1.2em;
     right:1.2em;
+    bottom: 80px;
     display: flex;
     justify-content:center;
     align-items: center;
@@ -126,6 +127,9 @@ header{
     .infoCardText{
         margin-left: 12px;
     }   
+    .buttonHolder{
+        bottom: 20px;
+    }
 
 }
 @media (max-width: 800px){
